# oz_git

./: .gitignore  README.md  oz_machin.ipynb  task 3 22.sql  test_pymongo.ipynb
Git1/: oz_back.yaml
blogpactice/: app.py  posts_routes.py
clolab/: data_analysis.ipynb
database/: asd.py  chapter01_06 .ipynb  chapter07_13.ipynb  data_genenrate.py  data_generate.py
flask-jwt/: blocklist.py
flask-login/: app.py
insta_restapi/: app.py
linux/: linux_0113(문제).ipynb  linux_1426.ipynb
membership/: db.sqlite3  pyproject.toml
mongoDB/: MongoDB.ipynb  mongoDB.py
myenv/: pyvenv.cfg
oz-backend-django/: db.sqlite3  orm.ipynb  pyproject.toml
oz-backend-django/boards/: admin.py  models.py
oz-backend-django/boards/migrations/: 0001_initial.py  0002_board_created_at_board_updated_at.py
oz-backend-django/common/: models.py
oz-backend-django/config/: authentication.py  settings.py  urls.py
oz-backend-django/feeds/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
oz-backend-django/feeds/migrations/: 0001_initial.py
oz-backend-django/reviews/: models.py  serializers.py  tests.py  urls.py  views.py
oz-backend-django/reviews/migrations/: 0001_initial.py
oz-backend-django/users/: admin.py  models.py  serializers.py  urls.py  views.py
oz-backend-django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py  0004_review.py  0005_delete_review.py
oz_scraping/: coupangindex.html  kream.py  melon_1.py  melon_2.py  naver_1.py  naver_2.py  naver_3.py  naver_4.py  selenium_0.py  selenium_04.py  selenium_1.py  task.py  (+3 more)
(+105 files in other folders)
